--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/beheer/">Admin Console</a></li>
             <li class="nav-item"><a class="nav-link" href="/lecturer/assignments">Lecturer</a></li>
+            <li class="nav-item"><a class="nav-link" href="/student">Student</a></li>
           </ul>
          <div class="d-flex align-items-center gap-2">
   <div class="btn-group btn-group-sm" role="group" aria-label="Adjust text size">
